--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,17 @@
     <string name="title_activity_new_cook">NewCook</string>
 
     <string-array name="meat_names">NewCook
-    <item>Beef</item>
+        <item>Beef</item>
         <item>Chicken</item>
         <item>Pork</item>
         <item>Lamb</item>
     </string-array>
 
     <string-array name="weight">NewCook
-        <item>100g</item>
-        <item>200g</item>
-        <item>300g</item>
-        <item>400g</item>
+        <item>1000g</item>
+        <item>1500g</item>
+        <item>2000g</item>
+        <item>3000g</item>
     </string-array>
 
     <string-array name="how_cooked">NewCook
@@ -22,4 +22,11 @@
         <item>Medium Rare</item>
         <item>Rare</item>
     </string-array>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_graph_fragment">Graph Fragment</string>
+    <string name="hello_time_fragment">Time Fragment</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
